--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: node_js
 sudo: false
 node_js:
-  - "6.1"
+	- "6.1"
 before_script:
-  - npm install -g gulp
+	- npm install
 script:
-  - gulp build
+	- gulp build
