--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss-url": "5.1.2"
   },
   "scripts": {
+  	"build": "gulp build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
