--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ node_js:
 	- "6.1"
 before_script:
 	- npm install
-	- npm install -g gulp
-	- npm install gulp
+	- npm install -g gulp-cli
 script:
 	- npm run build
