--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ node_js:
 	- "6.1"
 before_script:
 	- npm install
-	- npm install -g gulp-cli
-	- npm install gulp-cli
+	- npm install -g "gulpjs/gulp-cli#4.0"
 script:
 	- npm run build
