Trying to fix "Local gulp not found" 7

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: node_js
-sudo: false
+sudo: required
 node_js:
 	- "6.1"
 before_script:
 	- npm install
 script:
+	- sudo npm install gulp-cli@1.2.2 -g
 	- npm run build
