--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,8 @@ node_js:
 before_script:
 	- npm install
 script:
+	- npm rm -g gulp
 	- sudo npm install gulp-cli@1.2.2 -g
-	- npm run build
+	- npm uninstall gulp --save-dev
+	- npm install 'gulpjs/gulp.git#4.0'
+	- gulp build
