--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ before_script:
 	- npm install
 script:
 	- npm rm -g gulp
-	- sudo npm install gulp-cli@1.2.2 -g
+	- npm remove -g gulp-cli
 	- npm uninstall gulp --save-dev
+	- npm install gulp-cli@1.2.2 -g
 	- npm install 'gulpjs/gulp.git#4.0'
 	- gulp build
