Trying to fix "Local gulp not found" 11

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ node_js:
 	- "6.1"
 before_script:
 	- npm install
+	- npm rm -g gulp
+	- npm remove -g gulp-cli
+	- npm uninstall gulp --save-dev
+	- npm install gulp-cli@1.2.2 -g
+	- npm install 'gulpjs/gulp.git#4.0'
 script:
 	- npm run build
-#	- npm rm -g gulp
-#	- npm remove -g gulp-cli
-#	- npm uninstall gulp --save-dev
-#	- npm install gulp-cli@1.2.2 -g
-#	- npm install 'gulpjs/gulp.git#4.0'
 #	- gulp build
