--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "devDependencies": {
     "browser-sync": "2.18.6",
     "gulp-cli": "1.2.2",
-    "gulp": "3.9.1",
+    "gulp": "github:gulpjs/gulp#4.0",
     "gulp-babel": "6.1.2",
     "gulp-concat": "2.6.1",
     "gulp-cssnano": "2.1.2",
