--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ node_js:
   - "node"
 before_script:
   - npm install
-  - npm rm -g gulp
-  - npm remove -g gulp-cli
-  - npm uninstall gulp --save-dev
-  - npm install gulp-cli@1.2.2 -g
-  - npm install 'gulpjs/gulp.git#4.0'
+  #- npm rm -g gulp
+  #- npm remove -g gulp-cli
+  #- npm uninstall gulp --save-dev
+  #- npm install gulp-cli@1.2.2 -g
+  #- npm install 'gulpjs/gulp.git#4.0'
 script:
   - npm run build
   # - gulp build
